# visual_localization

./: CHANGELOG.rst  CMakeLists.txt  package.xml
config/: apriltag_config.yaml  apriltag_config_deprecated.yaml  apriltag_ranges_config.yaml  ekf_params.yaml  tag_poses.yaml  tags_standalone.yaml
launch/: calibration.launch.py  image_decoder.launch.py  image_rectification.launch.py  test.launch.py  test_launch.py  top_localization.launch.py  top_localization_for_sems.launch.py  top_ranges.launch.py  top_test_ekf_in_simulation.launch.py
nodes/: ranges_node  vision_ekf_node
scripts/: generate_tag_poses.py  tag_poses.yaml
src/: image_decoder.cpp  px4_bridge.cpp  px4_bridge.hpp  ranges.cpp
visual_localization/: ekf.py
