<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>visual_localization</name>
  <version>0.0.0</version>
  <description>The visual localization package</description>

  <maintainer email="nathalie.bauschmann@tuhh.de">Nathalie Bauschmann</maintainer>

  <license>TODO</license>

  <url type="website">hippocampusrobotics.github.io/docs</url>

  <author email="nathalie.bauschmann@tuhh.de">Nathalie Bauschmann</author>

  <buildtool_depend>ament_cmake</buildtool_depend>
  <buildtool_depend>ament_cmake_python</buildtool_depend>

  <depend>rclpy</depend>
  <depend>rclcpp</depend>
  <depend>rclcpp_components</depend>
  <depend>sensor_msgs</depend>
  <depend>cv_bridge</depend>
  <depend>hippo_msgs</depend>
  <depend>std_srvs</depend>
  <depend>tf_transformations</depend>
  <depend>geometry_msgs</depend>
  <depend>tf2_msgs</depend>

  <!-- The export tag contains other, unspecified, tags -->
  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
